Редактирует разметку catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -44,8 +44,8 @@
     </header>
 
     <main class="page-main main-inner container">
-<!--   Section -->
-      <section class="">
+<!-- Intro Section -->
+      <section class="intro">
         <h1 class="page-title">
           Гостиницы Седоны
         </h1>
@@ -61,7 +61,7 @@
             </a>
           </li>
         </ul>
-<!-- Фильтры -->
+      <!-- Фильтры -->
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="post">
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">
@@ -139,9 +139,106 @@
         </div>
         <ul class="catalog-list">
           <li class="catalog-card">
+            <img class="catalog-card-img" src="#" alt="писание картинки">
+            <h3 class="catalog-card-title">
+              Amara Resort & Spa
+            </h3>
+            <p class="catalog-card-content">
+              <span class="catalog-card-housing">Гостиница</span>
+              <span class="catalog-card-price">От 4000 ₽</span>
+            </p>
+            <div class="catalog-card-button-wrap">
+              <a class="button catalog-card-btn" href="#">
+                Подробнее
+              </a>
+              <button class="button catalog-card-btn catalog-card-btn-favorites" type="button">
+                В избранное
+              </button>
+            </div>
+            <div class="catalog-card-rating">
+              <span class="rating-stars"></span>
+              <span class="rating-number">
+                Рейтинг: <output name="hotelrating">8,5</output>
+              </span>
+            </div>
+          </li>
 
+          <li class="catalog-card">
+            <img class="catalog-card-img" src="#" alt="писание картинки">
+            <h3 class="catalog-card-title">
+              Villas at Poco Diablo
+            </h3>
+            <p class="catalog-card-content">
+              <span class="catalog-card-housing">Гостиница</span>
+              <span class="catalog-card-price">От 5000 ₽</span>
+            </p>
+            <div class="catalog-card-button-wrap">
+              <a class="button catalog-card-btn" href="#">
+                Подробнее
+              </a>
+              <button class="button catalog-card-btn catalog-card-btn-favorites" type="button">
+                В избранном
+              </button>
+            </div>
+            <div class="catalog-card-rating">
+              <span class="rating-stars"></span>
+              <span class="rating-number">
+                Рейтинг: <output name="hotelrating">9,2</output>
+              </span>
+            </div>
+          </li>
+
+          <li class="catalog-card">
+            <img class="catalog-card-img" src="#" alt="писание картинки">
+            <h3 class="catalog-card-title">
+              Desert Quail Inn
+            </h3>
+            <p class="catalog-card-content">
+              <span class="catalog-card-housing">Гостиница</span>
+              <span class="catalog-card-price">От 2500 ₽</span>
+            </p>
+            <div class="catalog-card-button-wrap">
+              <a class="button catalog-card-btn" href="#">
+                Подробнее
+              </a>
+              <button class="button catalog-card-btn catalog-card-btn-favorites" type="button">
+                В избранное
+              </button>
+            </div>
+            <div class="catalog-card-rating">
+              <span class="rating-stars"></span>
+              <span class="rating-number">
+                Рейтинг: <output name="hotelrating">6,9</output>
+              </span>
+            </div>
+          </li>
+
+          <li class="catalog-card">
+            <img class="catalog-card-img" src="#" alt="писание картинки">
+            <h3 class="catalog-card-title">
+              GreenTree Inn
+            </h3>
+            <p class="catalog-card-content">
+              <span class="catalog-card-housing">Гостиница</span>
+              <span class="catalog-card-price">От 1500 ₽</span>
+            </p>
+            <div class="catalog-card-button-wrap">
+              <a class="button catalog-card-btn" href="#">
+                Подробнее
+              </a>
+              <button class="button catalog-card-btn catalog-card-btn-favorites" type="button">
+                В избранное
+              </button>
+            </div>
+            <div class="catalog-card-rating">
+              <span class="rating-stars"></span>
+              <span class="rating-number">
+                Рейтинг: <output name="hotelrating">5,0</output>
+              </span>
+            </div>
           </li>
         </ul>
+        <!-- Pagination -->
         <ul class="pagination">
           <li class="pagination-item">
             <a class="pagination-link pagination-current">1</a>
