Редактирует catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -158,7 +158,7 @@
             <div class="catalog-card-rating">
               <span class="rating-stars"></span>
               <span class="rating-number">
-                Рейтинг: <output name="hotelrating">8,5</output>
+                Рейтинг: 8,5
               </span>
             </div>
           </li>
@@ -183,7 +183,7 @@
             <div class="catalog-card-rating">
               <span class="rating-stars"></span>
               <span class="rating-number">
-                Рейтинг: <output name="hotelrating">9,2</output>
+                Рейтинг: 9,2
               </span>
             </div>
           </li>
@@ -208,7 +208,7 @@
             <div class="catalog-card-rating">
               <span class="rating-stars"></span>
               <span class="rating-number">
-                Рейтинг: <output name="hotelrating">6,9</output>
+                Рейтинг: 6,9
               </span>
             </div>
           </li>
@@ -233,7 +233,7 @@
             <div class="catalog-card-rating">
               <span class="rating-stars"></span>
               <span class="rating-number">
-                Рейтинг: <output name="hotelrating">5,0</output>
+                Рейтинг: 5,0
               </span>
             </div>
           </li>
