--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
             </a>
             <a class="favorites" href="#" title="Избранное">
               <span class="visually-hidden">Избранное</span>
+              <span class="favorites-number">
+                12
+              </span>
             </a>
-            <a class="desire-btn" href="#">
+            <a class="button desire-btn" href="#">
               Хочу сюда!
             </a>
         </div>
@@ -48,7 +51,7 @@
       <section class="hero">
         <div class="hero-head">
           <h1 class="visually-hidden">
-            Welcome to the gorgeous Sedona
+            Седона — город в Аризоне.
           </h1>
           <img class="hero-head-img" src="#" alt="Welcome to the gorgeous Sedona 'Because the Grand Conyon sucks!'">
         </div>
@@ -162,7 +165,7 @@
         <p class="booking-offer">
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
-        <button class="booking-btn" type="button">
+        <button class="button booking-btn" type="button">
           Поиск гостиницы в Седоне
         </button>
       </section>
@@ -176,7 +179,7 @@
         </p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
           <input class="subscription-form-input" type="email" name="email" placeholder="Ваш e-mail" required>
-          <button class="subscription-form-btn" type="submit">
+          <button class="button subscription-form-btn" type="submit">
             Подписаться
           </button>
         </form>
@@ -201,7 +204,9 @@
           </a>
         </li>
       </ul>
-      <a class="tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <address class="contact-tel">
+        <a class="tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </address>
       <a class="htmlacademy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
         <img src="#" alt="логотип Html Academy">
       </a>
