--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <header class="page-header container">
       <nav class="page-navigation">
         <a class="logo" href="index.html">
-          <img src="#" alt="логотип city of sedona" title="city of sedona">
+          <img src="images/logo.svg" width="140" height="70" alt="логотип city of Sedona" title="city of Sedona">
         </a>
         <ul class="menu">
-          <li class="menu-item current">
-            <a class="menu-link">
+          <li class="menu-item">
+            <a class="menu-link current">
               Главная
             </a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="#">
-              О седоне
+              О Седоне
             </a>
           </li>
           <li class="menu-item">
@@ -53,22 +53,17 @@
           <h1 class="visually-hidden">
             Седона — город в Аризоне.
           </h1>
-          <img class="hero-head-img" src="#" alt="Welcome to the gorgeous Sedona 'Because the Grand Conyon sucks!'">
-        </div>
-        <div class="hero-content">
-          <h2 class="hero-subtitle">
-            Седона — небольшой городок в Аризоне, заслуживающий большего!
-          </h2>
-          <p class="hero-text">
-            Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-          </p>
+          <img class="hero-head-img" src="images/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona 'Because the Grand Conyon sucks!'">
         </div>
       </section>
 <!--  Advantages Section -->
       <section class="advantages">
-        <h2 class="visually-hidden">
-          Преимущества
+        <h2 class="advantages-title">
+          Седона — небольшой городок в Аризоне, заслуживающий большего!
         </h2>
+        <p class="advantages-offer">
+          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+        </p>
         <ul class="advantages-list">
           <li class="advantages-section">
             <div class="advantages-item advantages-item-description">
@@ -79,7 +74,7 @@
                 Седона — не аттракцион для туристов, там течёт своя жизнь
               </p>
             </div>
-            <img class="advantages-item advantages-item-img" src="#" alt="описание картинки">
+            <img class="advantages-item advantages-item-img" src="images/advantages-town.jpg" width="800" height="385" alt="город с зелеными зданиями, флагами и видом на горы за ними">
           </li>
           <li class="advantages-section">
             <ul class="advantages-description-list">
@@ -118,7 +113,7 @@
                 Да, по нему можно пройти! Если вы осмелитесь, разумеется
               </p>
             </div>
-            <img class="advantages-item advantages-item-img" src="#" alt="описание картинки">
+            <img class="advantages-item advantages-item-img" src="images/advantages-mountains.jpg" width="800" height="385" alt="пейзаж с красными скалами, соединяющимися в природный мост над лесистой долиной">
           </li>
         </ul>
       </section>
@@ -165,9 +160,9 @@
         <p class="booking-offer">
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
-        <button class="button booking-btn" type="button">
+        <a class="button booking-btn" href="#">
           Поиск гостиницы в Седоне
-        </button>
+        </a>
       </section>
 <!--  Subscribe Section -->
       <section class="subscription">
@@ -190,16 +185,16 @@
       <ul class="social-list">
         <li class="social-item">
           <a class="social-item-link" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Vkontakte</span>
+            <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
         <li class="social-item">
           <a class="social-item-link" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Telegram</span>
+            <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
         <li class="social-item">
-          <a class="social-item-link" href="https://www.youtube.com/user/">
+          <a class="social-item-link" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Youtube</span>
           </a>
         </li>
@@ -208,7 +203,7 @@
         <a class="tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
       <a class="htmlacademy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="#" alt="логотип Html Academy">
+        <img src="images/htmlacademy-logo.svg" width="115" height="33" alt="логотип Html Academy">
       </a>
     </footer>
   </body>
